kubernetes/main/apps/flux-system/weave-gitops/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: weave-gitops
spec:
  hostnames:
    - "gitops.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: weave-gitops
          port: 9001
      matches:
        - path:
            type: PathPrefix
            value: /
